typescript/checker/tests/conformance/expressions/binaryOperators/additionOperator/additionOperatorWithInvalidOperands.ts.stderr
error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            124,
        ),
        hi: BytePos(
            125,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/expressions/binaryOperators/additionOperator/additionOperatorWithInvalidOperands.ts:9:5
  |
9 | var a: boolean;
  |     ^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            140,
        ),
        hi: BytePos(
            141,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/additionOperator/additionOperatorWithInvalidOperands.ts:10:5
   |
10 | var b: number;
   |     ^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            155,
        ),
        hi: BytePos(
            156,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/additionOperator/additionOperatorWithInvalidOperands.ts:11:5
   |
11 | var c: Object;
   |     ^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            170,
        ),
        hi: BytePos(
            171,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/additionOperator/additionOperatorWithInvalidOperands.ts:12:5
   |
12 | var d: Number;
   |     ^

